fixed routing, alignment

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -7,8 +7,3 @@ body {
   margin: 0;
   padding: 0 50px;
 }
-.childrenContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
